--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
         </tr>
     </table>
     <hr color="yellow">
-    <a href="D:\Web Development\HTML\hobbies.html">My Hobbies</a>
+    <a href="hobbies.html">My Hobbies</a>
     <br>
-    <a href="D:\Web Development\HTML\contact.html">Contact me</a>
+    <a href="contact.html">Contact me</a>
     <br>
     <h5>Now fill the form:</h5>
     <br>
