--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,6 @@
 <body>
     <h3>Contact me</h3>
     <h4>My number - New number</h4>
-    <h4>My email - <a href="https://accounts.google.com/b/0/AddMailService">joshiabhishek1000@gmail.com</a></h4>
+    <h4>My email - <a href="https://accounts.google.com/b/0/AddMailService">Email Address</a></h4>
 </body>
 </html>
